Standardize reusable page headers across frontend and admin pages

--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -23,7 +23,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">All Years Dashboard</h1>
+                        <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">All Years Dashboard</h1>
+            </header>
             <p class="mb-4">Compare financial totals across every recorded year to reveal long-term trends and patterns in your finances.</p>
 
             <section class="cards cards-tight mt-6">
