--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -18,7 +18,9 @@
   <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-      <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Palette Settings</h1>
+                  <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Palette Settings</h1>
+            </header>
 
       <div class="cards space-y-4">
         <ul class="list-disc pl-5 text-gray-700">
