--- a/frontend/recurring_spend.html
+++ b/frontend/recurring_spend.html
@@ -22,7 +22,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Recurring Spend Detection</h1>
+                        <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Recurring Spend Detection</h1>
+            </header>
             <p class="mb-4">Run an analysis of the last 12 months to find subscriptions and other repeat expenses. The results highlight ongoing commitments so you know where money leaves your account regularly.</p>
             <button id="run-analysis" class="bg-indigo-600 text-white px-4 py-2 rounded mb-4"><i class="fas fa-chart-line inline w-4 h-4 mr-2"></i>Run Analysis</button>
             <h2 class="text-xl font-semibold mt-6 mb-2">Recurring Outgoings</h2>
