--- a/frontend/tags.html
+++ b/frontend/tags.html
@@ -22,7 +22,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Manage Tags</h1>
+                        <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Manage Tags</h1>
+            </header>
             <p class="mb-4">Create new tags and manage existing ones for categorising transactions. Tags act like labels that make reports and searches more meaningful.</p>
             <section class="cards cards-tight">
             <form id="tag-form" class="space-y-4">
