--- a/frontend/account.html
+++ b/frontend/account.html
@@ -22,7 +22,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-            <h1 id="account-name" class="text-2xl font-semibold mb-4 text-indigo-700">Account Balance</h1>
+                        <header class="page-header">
+                <h1 id="account-name" class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Account Balance</h1>
+            </header>
             <p id="account-details" class="mb-4 text-gray-600"></p>
             <p class="mb-4">View the balance over time based on the latest bank statement.</p>
             <div class="cards">
