--- a/frontend/ai_tags.html
+++ b/frontend/ai_tags.html
@@ -19,7 +19,9 @@
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="ops-main flex-1 min-w-0 overflow-x-auto space-y-6">
-        <h1 class="text-2xl font-semibold mb-4 text-indigo-700">AI Tags</h1>
+                    <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">AI Tags</h1>
+            </header>
         <p class="mb-4">Configure OpenAI and automatically tag transactions.</p>
 
         <section>
