--- a/frontend/backup.html
+++ b/frontend/backup.html
@@ -20,7 +20,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto space-y-6">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Backup &amp; Restore</h1>
+                        <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Backup &amp; Restore</h1>
+            </header>
             <p class="mb-4">Create backups of your data or restore from an earlier snapshot. Use the tools below to download a copy of your information or load a previous backup.</p>
             <section class="cards space-y-4">
                 <h2 class="text-xl font-semibold">Download Backup</h2>
