--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -22,7 +22,9 @@
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-        <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Budgets</h1>
+                    <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Budgets</h1>
+            </header>
         <p class="mb-4">Set monthly spending limits for categories and monitor progress. Use this page to plan ahead and see where you may need to adjust your spending.</p>
         <section class="ops-section">
             <form id="budget-form" class="ops-form-grid cols-4">
