--- a/frontend/dedupe.html
+++ b/frontend/dedupe.html
@@ -20,7 +20,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Duplicate Transactions</h1>
+                        <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Duplicate Transactions</h1>
+            </header>
             <p class="mb-4">Remove unwanted duplicate entries to keep your records accurate.</p>
             <div class="cards">
                 <div class="mb-4 space-x-2">
