--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -23,7 +23,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-            <h1 id="page-title" class="text-2xl font-semibold mb-4 text-indigo-700">Monthly Statement</h1>
+                        <header class="page-header">
+                <h1 id="page-title" class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Monthly Statement</h1>
+            </header>
             <p class="mb-4">Select a month to view a detailed list of transactions. Reviewing each line ensures the data is accurate and properly tagged.</p>
             <div class="cards">
                 <form id="statement-form" class="flex flex-wrap items-end gap-4">
