--- a/frontend/processes.html
+++ b/frontend/processes.html
@@ -20,7 +20,9 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-            <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Run Processes</h1>
+                        <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Run Processes</h1>
+            </header>
             <p class="mb-4">Run background tasks like auto-tagging, category or segment assignment. These automated processes tidy your data so reports stay accurate without manual effort.</p>
             <div class="space-x-4">
                 <button id="tagging-btn" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fas fa-tags inline w-4 h-4 mr-1"></i>Run Tagging</button>
