--- a/frontend/projects_board.html
+++ b/frontend/projects_board.html
@@ -21,7 +21,9 @@
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="ops-main flex-1 min-w-0 overflow-x-auto space-y-6">
-        <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Project Board</h1>
+                    <header class="page-header">
+                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Project Board</h1>
+            </header>
         <p class="mb-4">Browse all active projects in a card layout.</p>
 
         <section class="cards cards-solid cards-tight space-y-4">
